# vexfs

./: .dockerignore  .env.testing  .gitignore  ACTUAL_PROJECT_STATUS.md  API_DOCUMENTATION.md  AUTHENTICATION.md  CLAUDE.md  CLEAN_PROJECT_STRUCTURE.md  COMPILATION_FIX_STRATEGY.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.optimized  Dockerfile.server  Dockerfile.vexfs-server  EMERGENCY_SAFETY_NOTICE.md  FUSE_STATUS.md  KERNEL_MODULE_ORGANIZATION_COMPLETE.md  Kbuild  LICENSE  LICENSE.kernel  MOUNT_FIXES_PERFORMANCE_COMPARISON.md  Makefile  Makefile.ffi  Makefile.integration  Makefile.unified  NOTICE  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_ANALYSIS.md  PROJECT_STATUS_REPORT.md  PROJECT_STRUCTURE.md  README-Docker.md  README.md  TEST_RESULTS_2025_08_16.md  VECTOR_FILESYSTEM_INTERFACE.md  VEXGRAPH_ROADMAP.md  cbindgen.toml  cleanup.sh  (+29 more)
bindings/python/: Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
bindings/python/examples/: basic_usage.py
bindings/python/src/: client.py  filesystem_interface.cpp  lib.rs  vector_operations.cpp  vexfs_python.cpp
rust/: Cargo.toml  Cargo_corrupted.toml
rust/.cargo/: config.toml
rust/src/: auth_minimal.rs  chromadb_api.rs  cross_layer_consistency.rs  cross_layer_integration.rs  enhanced_vector_search.rs  error_handling.rs  fuse_README.md  fuse_error_handling.rs  fuse_impl.rs  fuse_impl_safe.rs  fuse_impl_task_23_8.rs  fuse_integration_tests.rs  fuse_vexgraph_bridge.rs  fuse_vexgraph_integrated.rs  fuse_with_monitoring.rs  health_endpoint.rs  hybrid_query_optimizer.rs  inode.rs  ioctl.rs  ioctl_integration.rs  journal.rs  kernel_error_handling.rs  knn_search.rs  lib.rs  monitoring.rs  ondisk.rs  panic_handler.rs  performance_optimizations.rs  performance_optimizations_task_23_8.rs  performance_optimizations_task_23_8_bridge.rs  query_planner.rs  superblock.rs  vector_handlers.rs  vector_handlers_stub.rs  vector_metrics.rs  vector_search_integration.rs  vector_storage_optimized.rs
rust/src/anns/: advanced_indexing.rs  advanced_strategies.rs  hnsw.rs  hnsw_optimized.rs  integration.rs  memory_mgmt.rs  memory_optimization.rs  mod.rs  performance_validation.rs  performance_validation_test.rs  persistence.rs  realistic_benchmark.rs  recovery.rs  serialization.rs  stack_safety_monitor.rs  wal.rs
rust/src/auth/: mod.rs
rust/src/client/: connection.rs  ioctl.rs  ipc.rs  mock.rs  mod.rs
rust/src/commands/: embedding.rs  fsck.rs  status.rs
rust/src/core/: dir_ops.rs
rust/src/dialects/: chromadb.rs  mod.rs  native.rs  qdrant.rs  qdrant_optimized.rs  router.rs
rust/src/ffi/: error_handling.rs  hang_prevention.rs  kernel.rs  mod.rs
rust/src/fs_core/: cow.rs  cow_garbage_collection.rs  cow_integration.rs  cow_vector_integration.rs  directory.rs  enhanced_operation_context.rs  file.rs  inode.rs  locking.rs  mod.rs  operations.rs  path.rs  permissions.rs  snapshot.rs
rust/src/ipc/: load_balancer.rs  messages.rs  mod.rs  protocol.rs  queue_manager.rs  request_handler.rs  response_manager.rs  service_manager.rs  service_registry.rs  transport.rs
rust/src/output/: mod.rs  progress.rs
rust/src/security/: acl.rs  capabilities.rs  encryption.rs  integrity.rs  key_management.rs  mod.rs
rust/src/semantic_api/: advanced_event_router.rs  advanced_graph_analytics.rs  advanced_graph_analytics_impl.rs  agent_framework.rs  api_integration_test.rs  api_server.rs  api_server_stub.rs  auth.rs  automation_framework.rs  automation_framework_impl.rs  automation_rule_engine.rs  boundary_sync_manager.rs  client.rs  cluster_coordinator.rs  clustering_analyzer_impl.rs  complex_event_processor.rs  cross_boundary_coordinator.rs  distributed_coordination.rs  distributed_coordination_impl.rs  distributed_event_synchronizer.rs  distributed_state_manager.rs  event_analytics_engine.rs  event_emission.rs  event_filtering.rs  event_ordering_service.rs  event_propagation.rs  event_propagation_integration.rs  event_propagation_manager.rs  event_propagation_test.rs  event_replay_engine.rs  event_routing.rs  event_synchronization.rs  fuse_event_mapper.rs  fuse_graph_config.rs  fuse_graph_integration.rs  fuse_graph_integration_manager.rs  fuse_journal_integration.rs  fuse_journal_integration_test.rs  fuse_journal_manager.rs  graph_health_monitor_impl.rs  (+39 more)
rust/src/shared/: config.rs  constants.rs  error_handling.rs  errors.rs  macros.rs  memory_management.rs  mod.rs  system_hang_prevention.rs  types.rs  utils.rs
rust/tests/: comprehensive_qdrant_test_suite.rs  comprehensive_qdrant_test_suite_fixed.rs  cross_layer_consistency_tests.rs  cross_layer_integration_tests.rs  qdrant_api_test.rs  qdrant_performance_test.rs
tests/kernel_module/: Cargo.toml  KSELFTEST_INTEGRATION.md
vexctl/: Cargo.toml
vexctl/src/: error.rs  lib.rs  main.rs
vexfs/: .gitignore  ANNS_IMPLEMENTATION.md  BUILD_SYSTEM.md  Cargo.toml  DDD_DOMAIN_ARCHITECTURE.md  DDD_ENTITY_EXTRACTION_PLAN.md  DDD_IMPLEMENTATION_GUIDE.md  DDD_PHASE_2_COMPLETION_SUMMARY.md  DDD_PHASE_3_COMPLETION_SUMMARY.md  DDD_PHASE_3_FS_CORE_IMPLEMENTATION_SUMMARY.md  FILESYSTEM_ARCHITECTURE_ANALYSIS.md  Kbuild  Makefile  SUBTASK_1_2_COMPLETION_SUMMARY.md  SUBTASK_1_3_COMPLETION_SUMMARY.md  SUBTASK_1_4_COMPLETION_SUMMARY.md  SUBTASK_1_5_COMPLETION_SUMMARY.md  SUBTASK_3_1_COMPLETION_SUMMARY.md  SUBTASK_3_2_COMPLETION_SUMMARY.md  SUBTASK_3_2_IMPLEMENTATION_PLAN.md  TASK_2_VFS_INTERFACE_COMPLETION.md  TASK_6_COMPLETION_SUMMARY.md  VECTOR_STORAGE.md  libvector_storage.rlib  size_check  size_test  size_test2  test_ffi  test_ffi_integration  vexfs_ffi.h  vexfs_module_entry.c
vexfs-auto-ingest/: Cargo.toml  README.md  config.example.toml
vexfs-auto-ingest/src/: cli.rs  config.rs  main.rs  storage.rs  watcher.rs
vexfs/.cargo/: config.toml
vexfs/src/: anns.rs  anns_test.rs  dir_ops.rs  file_ops.rs  inode.rs  inode_mgmt.rs  ioctl.rs  journal.rs  knn_search.rs  lib.rs  ondisk.rs  result_scoring.rs  space_alloc.rs  superblock.rs  vector_handlers.rs  vector_metrics.rs  vector_search.rs  vector_search_integration.rs  vector_storage.rs  vector_test.rs
(+1426 files in other folders)
