[package]
name = "vexctl"
version = "1.0.0"
edition = "2021"
authors = ["VexFS Contributors"]
description = "Control tool for VexFS - Vector Extended File System"
repository = "https://github.com/vexfs/vexfs"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["filesystem", "vector", "cli", "control"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "color"] }
nix = { version = "0.27.1", features = ["ioctl", "fs"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = "0.15"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
memmap2 = "0.9"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"], optional = true }
env_logger = "0.10"
url = "2.4"

[features]
default = []
async = ["tokio"]
