[package]
name = "vexfs-auto-ingest"
version = "1.0.0"
edition = "2021"
authors = ["VexFS Team <dev@vexfs.org>"]
description = "Auto-ingestion embedding pipeline daemon for VexFS"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
walkdir = "2.0"
ignore = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[features]
default = ["openai", "ollama"]
openai = []
ollama = []

[[bin]]
name = "vexfs-auto-ingest"
path = "src/main.rs"

[[bin]]
name = "vexfsctl"
path = "src/cli.rs"