[package]
name = "vexfs"
version = "0.1.0"
edition = "2021"
authors = ["VexFS Contributors"]
description = "VexFS kernel module and core filesystem implementation"
repository = "https://github.com/vexfs/vexfs"
license = "Apache-2.0 OR GPL-2.0-only"
readme = "../README.md"
keywords = ["filesystem", "vector", "kernel", "embeddings"]
categories = ["filesystem", "os", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Math functions for userspace operations
libm = "0.2"

# Allocator for userspace testing
linked_list_allocator = "0.10"

# Spinlocks for kernel-safe locking
spin = "0.9"

[lib]
crate-type = ["staticlib"]

# Add test binary target (only for userspace builds)
[[bin]]
name = "vector_test_runner"
path = "src/bin/vector_test_runner.rs"
required-features = ["std"]

[profile.release]
panic = "abort"
opt-level = 2
lto = true

[profile.dev]
panic = "abort"
opt-level = 0

# Features for conditional compilation
[features]
default = ["std"]
std = []
kernel = []      # Feature for kernel module compilation
kernel-minimal = ["kernel"]  # Kernel compilation without floating point
c_bindings = []  # Feature for C FFI approach with kernel module
