[package]
name = "vexfs-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "vexfs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
vexfs = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
pyo3-build-config = "0.21"