[package]
name = "vexfs-kernel-tests"
version = "0.1.0"
edition = "2021"
authors = ["VexFS Team"]
description = "VexFS Kernel Module Testing Suite"

[[bin]]
name = "level1_runner"
path = "src/bin/level1_runner.rs"

[[bin]]
name = "level2_runner"
path = "src/bin/level2_runner.rs"

[[bin]]
name = "kselftest_runner"
path = "src/bin/kselftest_runner.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Add test dependencies here if needed

[features]
default = []